<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">IMobileApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_page">ShareKnowledge</string>

    <string name="menu_create">CREATE SURVEY</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_send">SEND</string>
    <string name="menu_receive">RECEIVE SURVEY</string>
    <string name="menu_select">Answer</string>
    <string name="menu_see_gestionnaire">MY SURVEYS</string>
    <string name="menu_info">\?</string>
    <string name="title_activity_create__survey">New Survey</string>
    <string name="question_mark">No questions in your survey</string>
    <string name="title_activity_list__questionnaire">List_Questionnaire</string>
    <string name="title_activity_list__survey">Surveys</string>

    <string name="button_connect">Connect</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="title_devices">Devices</string>
    <string name="scan">Scan</string>
    <string name="stopScan">Stop Scanning</string>
    <string name="title_activity_send">SendActivity</string>
    <string name="title_activity_add__modify__question">Add question</string>
    <string name="enter_question">Enter a question</string>
    <string name="add_answer">Add answer</string>


    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">Connecting...</string>
    <string name="title_connected_to">Connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">Not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="title_activity_answer">AnswerActivity</string>
    <string name="survey_name">Survey selected :</string>
    <string name="creation_date">Creation date :</string>
    <string name="status">Status :</string>
    <string name="menu_scan">SCAN</string>

    <!-- Activity answer-->
    <string name="start_questionnaire">Start</string>
    <string name="next_questionne">Next</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="title_activity_receive">ReceiveActivity</string>
    <string name="receive_title_reception">Received survey</string>
    <string name="receive_discoverable">Discoverable</string>
    <string name="layout_servey_questions">questions</string>
    <string name="layout_servey_question">question</string>
</resources>
