<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.qc.bdeb.imobileapp.application.HomePage"
    tools:showIn="@layout/activity_home_page">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/MainLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true">

                <RelativeLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <mehdi.sakout.fancybuttons.FancyButton
                        android:id="@+id/home_page_btn_creer"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"

                        style="@style/style_home_button"

                        android:paddingBottom="10dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingTop="10dp"
                        fancy:fb_borderColor="#FFFFFF"
                        fancy:fb_borderWidth="1dp"
                        fancy:fb_defaultColor="#6fa700"
                        fancy:fb_focusColor="#7ab800"
                        fancy:fb_iconPosition="left"
                        fancy:fb_radius="20dp"
                        fancy:fb_text="@string/menu_create"
                        fancy:fb_textColor="#FFFFFF"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true" />
                </RelativeLayout>


                <RelativeLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <mehdi.sakout.fancybuttons.FancyButton
                        android:id="@+id/home_page_btn_recevoir"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingTop="10dp"
                        fancy:fb_borderColor="#FFFFFF"
                        fancy:fb_borderWidth="1dp"
                        fancy:fb_defaultColor="#6fa700"
                        fancy:fb_focusColor="#7ab800"
                        fancy:fb_iconPosition="left"
                        fancy:fb_radius="20dp"
                        fancy:fb_text="@string/menu_receive"
                        fancy:fb_textColor="#FFFFFF"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        style="@style/style_home_button"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <mehdi.sakout.fancybuttons.FancyButton
                        android:id="@+id/home_page_btn_voir_questionnaire"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingTop="10dp"
                        fancy:fb_borderColor="#FFFFFF"
                        fancy:fb_borderWidth="1dp"
                        fancy:fb_defaultColor="#6fa700"
                        fancy:fb_focusColor="#7ab800"
                        fancy:fb_iconPosition="left"
                        fancy:fb_radius="20dp"
                        fancy:fb_text="@string/menu_see_gestionnaire"
                        fancy:fb_textColor="#FFFFFF"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        style="@style/style_home_button"/>
                </RelativeLayout>
            </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:src="@drawable/icon"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Share Knowlegde"
            android:textColor="@android:color/white"
            android:id="@+id/textView4"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/imageView2"
            android:layout_toEndOf="@+id/imageView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="with quiz"
            android:textColor="@android:color/white"
            android:id="@+id/textView5"
            android:layout_below="@+id/textView4"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignStart="@+id/textView4" />

    </RelativeLayout>
</RelativeLayout>
